--- a/main.css
+++ b/main.css
@@ -5,33 +5,34 @@
 .Container{
 
     background-color: black;
-    margin: 0px;
+    height:100vh;
 }
 /*  Navigation bar */
 .Navbar{
-    background-color: grey;
-    
+    background-color: beige;
+    flex: column;
 }
 
 .Navbar p{
     font-size: 30px;
-    color: white;
-    padding: 20px 50px 10px 20px;
+    color: black;
+    padding: 1rem 1rem 0rem 0rem;
     text-align: center;
 }
 
 .Navbar a{
-    color: white;
+    color: black;
     text-decoration: none;
     font-size: 50px;
-    margin: 30px 50px 75px 50px;
+    margin: 1rem 1rem 1rem 1rem;
     padding: 10px;
     align: center;
 }
+/* top, right, bottom, left */
 
 .Navbar a:hover{
 
-    color:black ;
+    color:blue ;
 
 }
 
@@ -39,9 +40,10 @@
 
 .purpose{
     font-size: 20px;
-    background-color: black;
-    color: white;
+    background-color: azure;
+    color: black;
     margin: 20px;
+    height:300px;
     
     
 }
@@ -51,18 +53,6 @@ padding: 10px 20px 10px 20px;
 
 }
 
-.purpose a{
-
-}
-
-/* Showcase of Projects */
-.projects{
-    color: white;
-    padding: 40px;
-}
-.projects ul{
-    list-style: none;
-}
 
 /* Footer */
 
@@ -70,6 +60,7 @@ padding: 10px 20px 10px 20px;
     margin: 0px;
     background-color: black;
     color: white;
+    padding: 1rem;
 }
 
 }
@@ -80,78 +71,66 @@ padding: 10px 20px 10px 20px;
 
 @media screen and (max-width: 800px) {
 
-    /* Holds all the Contents */
-    .Container{
-    
-        background-color: black;
-        margin: 0px;
-    }
-    /*  Navigation bar */
-    .Navbar{
-        background-color: grey;
-        
-    }
-    
-    .Navbar p{
-        font-size: 30px;
-        color: white;
-        padding: 20px 50px 10px 20px;
-        text-align: center;
-    }
-    
-    .Navbar a{
-        color: white;
-        text-decoration: none;
-        font-size: 50px;
-        margin: auto;
-        align: center;
-    }
-    
-    .Navbar a:hover{
-    
-        color:black ;
-    
-    }
-    
-    /* Purpose of the page */
-    
-    .purpose{
-        font-size: 20px;
-        background-color: black;
-        color: white;
-        margin: 20px;
-        
-        
-    }
-    
-    .purpose p{
-    padding: 10px 20px 10px 20px;
-    
-    }
-    
-    .purpose a{
-    
-    }
-    
-    /* Showcase of Projects */
-    .projects{
-        color: white;
-        padding: 40px;
-    }
-    .projects{
-        
-    }
-    .projects ul{
-        list-style: none;
+ /* Holds all the Contents */
+.Container{
 
-    }
+    background-color: azure;
+
+}
+/*  Navigation bar */
+.Navbar{
+    background-color: beige;
+    flex: column;
+}
+
+.Navbar p{
+    font-size: 30px;
+    color: black;
+    padding: 1rem 1rem 0rem 0rem;
+    text-align: center;
+}
+
+.Navbar a{
+    color: black;
+    text-decoration: none;
+    font-size: 50px;
+    margin: 1rem 1rem 1rem 1rem;
+    padding: 10px;
+    align: center;
+}
+/* top, right, bottom, left */
+
+.Navbar a:hover{
+
+    color:blue ;
+
+}
+
+/* Purpose of the page */
+
+.purpose{
+    font-size: 20px;
+    background-color: azure;
+    color: black;
+    margin: 20px;
     
-    /* Footer */
     
-    .Footer{   
-        margin: 0px;
-        background-color: black;
-        color: white;
-    }
-    
-    }
+}
+
+.purpose p{
+padding: 10px 20px 10px 20px;
+
+}
+
+
+
+
+/* Footer */
+
+.Footer{   
+    margin: 0px;
+    background-color: black;
+    color: white;
+}
+
+}
